# cs111_basic_img_manipulation

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hw1  hw1.cpp  imgfeed.sh
others/: changed_log  hw_shell_scrip  lesson_learnt  notes  updates_plan
