cmake_minimum_required(VERSION 2.8)
project(cs111_hw1)
find_package(OpenCV REQUIRED)
message(STATUS "OpenCV_INCLUDE_DIRS = ${OpenCV_INCLUDE_DIRS}")
message(STATUS "OpenCV_LIBS = ${OpenCV_LIBS}")
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(hw1 hw1.cpp)
target_link_libraries(hw1 ${OpenCV_LIBS})
